@@ -1,3 +1,15 @@
+2008-04-25  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
+        Reviewed by Maciej.
+
+        Bug 18728: SQUIRRELFISH: invalid regular expression constants should throw exceptions
+        <https://bugs.webkit.org/show_bug.cgi?id=18728>
+
+        Fixes another regression test.
+
+        * kjs/nodes.cpp:
+        (KJS::RegExpNode::emitCode):
+
 2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
         Reviewed by Geoffrey Garen.
